# pygame

./: .gitignore  pyproject.toml
docs/reST/tut/ja/: PygameIntro.md  PygameIntro.rst  chimp.py.rst  newbieguide.md  newbieguide.rst
